app/assets/stylesheets/headings.scss
h1, h2, h3, h4, h5, h6, h7 {
  margin: 0px;
}

h1 {
  color: #FFF;
  font-size: 30px;
}
h2 {
  color: #FFF;
  font-size: 26px;
}
h3 {
  color: #FFF;
  font-size: 24px;
}
h4 {
  color: #ADADAD;
  font-size: 18px;
}
h5 {
  color: #FFF;
  font-size: 18px;
}
h6 {
  color: #EC5037;
}
p {
  color: #ADADAD;
  font-size: 15px;
}

@media only screen and (max-width: 767px) {
  h1 {
    font-size: 22px;
    padding: 5px;
  }

  h2 {
    font-size: 20px;
    padding: 5px;
  }
  h3 {
    font-size: 18px;
    padding: 5px;
  }
  h4 {
    font-size: 17px;
    padding: 5px;
  }
  h5 {
    font-size: 14px;
    padding: 5px;
  }
  h6 {
  }
  a {
    font-size: 11px;
  }
}


.header {

  .navbar-brand {
    padding: 0px;
  }
  .navbar-brand>img {
    height: 100%;
    padding: 15px;
    width: auto;
  }


  body {
    padding-top: 80px;
  }
  .first-navbar {
    height: 50px;
    background-color: #EC5037;
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 25px;

    a.header-major-cta {
      color: black !important;
      border: 2px solid #EC5037;
      font-size: 16px;
      padding: 0px;
      border-radius: 5px;
    }

    h5 {
      color:white;
      padding: 0px;
    }

    a {
      color: #333;
    }

    a:hover {
      color: white;
    }
  }
  .second-navbar{
    top:50px;
    background-color: #FFF;


    a:hover {
      text-decoration: none;
      color: #38A9C7 !important;
    }
    img {
      display: inline !important;
    }


    @media only screen and (max-width: 541px) {
      
      .collapse {
          display: none !important;
      }

      li {
        float: none !important;
        margin-left: 0px !important;
        display: flex;
        text-align:center;
        font-size: 12px;
      }
      .nav-link-link {
        font-size: 16px;
      }

    }


  }

  @media (min-width: 600px) {

    .navbar-nav {
      width: 100%;
      text-align: center;
    }
    .navbar-nav > li {
      float: none;
      display: inline-block;
      position: relative;
      top: 0%;
    }
    .navbar-nav > li.navbar-right {
      float: right !important;
    }
  }
  a.header-major-cta {
    color: #EC5037 !important;
    border: 2px solid #EC5037;
    font-size: 14px;
    padding: 12px;
    border-radius: 5px;
  }

  .nav-link {
    font-size: 18px;
    text-align:center;
  }

  nav-item {
    border: 2px solid black;
  }
  a.active:after {
    content: ' ';
    position: absolute;
    border: solid 10px transparent;
    border-top: solid 0px transparent;
    border-width: 10px;
    margin-top: 45px;
    margin-left: -20px;
    border-color: #FFF transparent transparent transparent;
  }
  @media only screen and (max-width: 767px) {
    a.active:after {
      display: none;
    }
  }
  button {
    color: #38A9C7;
  }
  button:focus {
    outline: 5px auto #38A9C7;
  }

}

